--- a/app/Makefile
+++ b/app/Makefile
@@ -1,2 +1,18 @@
 run-dist:
 	./build/install/app/bin/app
+
+clean:
+	./gradlew clean
+
+build:
+	./gradlew clean build
+
+install:
+	./gradlew clean install
+
+lint:
+	./gradlew checkstyleMain
+
+check-deps:
+	./gradlew dependencyUpdates -Drevision=release
+
