--- a/app/Makefile
+++ b/app/Makefile
@@ -1,6 +1,9 @@
 run-dist:
 	./build/install/app/bin/app
 
+run:
+	./gradlew run
+
 clean:
 	./gradlew clean
 
@@ -16,3 +19,6 @@ lint:
 check-deps:
 	./gradlew dependencyUpdates -Drevision=release
 
+build-run: build run
+
+.PHONY: build
